--- a/src/shouye.html
+++ b/src/shouye.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <!-- 遮罩层 -->
+    <div class="mask_layer"></div>
     <header>
         <div class="inner">
             <!-- logo -->
@@ -43,7 +45,8 @@
         <!-- 导航 -->
         <nav>
             <ul class=".clear:after">
-                <li class="one"><a href="#" class="hover">男的</a><span></span></li>
+                <li class="one man-mouse"><a href="#" class="hover">男的</a><span></span></li>
+                <!-- 二级导航 -->
                 <div class="man">
                     <ul class="man-top">
                         <li><a href="">
@@ -118,20 +121,37 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main style="margin-top: 130px;">
         <!-- 广告条 -->
         <div class="banner">
-            <div class="inner">
-                <!-- <div class="">
-                    <a href="#">CONVERSE匡威官方商城不会以任何误设置扣款以及优惠券理由，要求您提供银行卡以及取消等操作，如果有问题请及时联系在线客服，感谢您的谅解和支持。
-                    </a>
+            <div class="nav-notice">
+                <div style="height: 33px;">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide move_one" >
+                            <div>
+                                <div>
+                                    <a
+                                        href="">CONVERSE匡威官方商城不会以任何误设置扣款以及优惠券理由，要求您提供银行卡以及取消等操作，如果有问题请及时联系在线客服，感谢您的谅解和支持。</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide move_two" >
+                            <div>
+                                <div>
+                                    <a href="">加入CONVERSE会员玩享，畅享全部订单免费配送！点击了解更多会员福利。 </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide move_three" >
+                            <div>
+                                <div>
+                                    <a
+                                        href="">尊敬的顾客您好，我们店铺是不会泄露您的消费信息的，请放心。另外我们也不会要求获取、收集、使用任何与消费者金融消费类（如：信用卡）信息，如果接到以上信息电话，是属于诈骗电话，请勿相信，以防钱财损失。如您对订单有疑问，请联系在线客服。</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <a href="#">加入CONVERSE会员玩享，畅享全部订单免费配送！点击了解更多会员福利。 </a>
-                </div>
-                <div>
-                    <a href="#">尊敬的顾客您好，我们店铺是不会泄露您的消费信息的，请放心。另外我们也不会要求获取、收集、使用任何与消费者金融消费类（如：信用卡）信息，如果接到以上信息电话，是属于诈骗电话，请勿相信，以防钱财损失。如您对订单有疑问，请联系在线客服。</a>
-                </div> -->
             </div>
         </div>
         <!-- 幻灯片 -->
@@ -352,7 +372,7 @@
                     <!-- <span>Converse</span> -->
                 </div>
             </a>
-            <p>
+            <p class="footer-bottom">
                 @匡威体育用品（中国）有限公司 保留所有权利&nbsp;&nbsp;&nbsp;&nbsp;沪ICP备11044134号-2
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#">
@@ -367,14 +387,14 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#">公司证照</a>
             </p>
-            <div><a href="#">
+            <div class="tip-for-fraud"><a href="#">
                     <img src="https://image.converse.com.cn/images/cautionIcon.png">
-                    <span>亲爱的市民朋友，上海警方反诈劝阻电话“962110”系专门针对避免您财产被骗受损而设，请您一旦收到来电，立即接听。</span>
+                    <span style="display: none;">亲爱的市民朋友，上海警方反诈劝阻电话“962110”系专门针对避免您财产被骗受损而设，请您一旦收到来电，立即接听。</span>
                 </a>
             </div>
         </div>
     </footer>
-
+    <script src="./script/index.js"></script>
 </body>
 
 </html>
