第二天提交

--- a/src/shouye.html
+++ b/src/shouye.html
@@ -14,8 +14,6 @@
 </head>
 
 <body>
-    <!-- 遮罩层 -->
-    <div class="mask_layer"></div>
     <header>
         <div class="inner">
             <!-- logo -->
@@ -114,6 +112,8 @@
                             </a></li>
                     </ul>
                 </div>
+                <!-- 遮罩层 -->
+                <div class="mask_layer"></div>
                 <li class="one"><a href="#" class="hover">女的</a><span></span></li>
                 <li class="one"><a href="#" class="hover">儿童</a><span></span></li>
                 <li class="one"><a href="#">联名合作款</a><span></span></li>
@@ -124,81 +124,134 @@
     <main style="margin-top: 130px;">
         <!-- 广告条 -->
         <div class="banner">
-            <div class="nav-notice">
-                <div style="height: 33px;">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide move_one" >
-                            <div>
-                                <div>
-                                    <a
-                                        href="">CONVERSE匡威官方商城不会以任何误设置扣款以及优惠券理由，要求您提供银行卡以及取消等操作，如果有问题请及时联系在线客服，感谢您的谅解和支持。</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide move_two" >
-                            <div>
-                                <div>
-                                    <a href="">加入CONVERSE会员玩享，畅享全部订单免费配送！点击了解更多会员福利。 </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide move_three" >
-                            <div>
-                                <div>
-                                    <a
-                                        href="">尊敬的顾客您好，我们店铺是不会泄露您的消费信息的，请放心。另外我们也不会要求获取、收集、使用任何与消费者金融消费类（如：信用卡）信息，如果接到以上信息电话，是属于诈骗电话，请勿相信，以防钱财损失。如您对订单有疑问，请联系在线客服。</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="inner">
+                <div class="swiper-slide move_one">
+                    <a href="">CONVERSE匡威官方商城不会以任何误设置扣款以及优惠券理由，要求您提供银行卡以及取消等操作，如果有问题请及时联系在线客服，感谢您的谅解和支持。</a>
+                </div>
+                <div class="swiper-slide move_two">
+                    <a href="">加入CONVERSE会员玩享，畅享全部订单免费配送！点击了解更多会员福利。 </a>
+                </div>
+                <div class="swiper-slide move_three">
+                    <a
+                        href="">尊敬的顾客您好，我们店铺是不会泄露您的消费信息的，请放心。另外我们也不会要求获取、收集、使用任何与消费者金融消费类（如：信用卡）信息，如果接到以上信息电话，是属于诈骗电话，请勿相信，以防钱财损失。如您对订单有疑问，请联系在线客服。</a>
                 </div>
             </div>
         </div>
         <!-- 幻灯片 -->
         <div class="slide" style="width: 100%;">
             <div class="pic">
-                <div class="">
+                <div>
                     <a href="">
-                        <img width="100%" src="https://image.converse.com.cn/static/kv/pc/marble_kv_pc_191214.jpg" />
+                        <img width="100%" height="100%"
+                            src="https://image.converse.com.cn/static/kv/pc/marble_kv_pc_191214.jpg" />
                     </a>
                 </div>
-                <div class="hid">
+                <div>
                     <a href="">
-                        <img width="100%" src="https://image.converse.com.cn/static/kv/pc/asap_nast_kv_pc_191213.jpg" />
+                        <img class="hid" width="100%" height="100%"
+                            src="https://image.converse.com.cn/static/kv/pc/asap_nast_kv_pc_191213.jpg" />
                     </a>
                 </div>
-                <div class="hid">
+                <div>
                     <a href="">
-                        <img width="100%" src="https://image.converse.com.cn/static/kv/pc/jwa_kv_pc_191209.jpg" />
+                        <img class="hid" width="100%" height="100%"
+                            src="https://image.converse.com.cn/static/kv/pc/jwa_kv_pc_191209.jpg" />
                     </a>
                 </div>
-                <div class="hid">
+                <div>
                     <a href="">
-                        <img width="100%" src="https://image.converse.com.cn/static/kv/pc/utility_kv_pc_191213.png" />
+                        <img class="hid" width="100%" height="100%"
+                            src="https://image.converse.com.cn/static/kv/pc/utility_kv_pc_191213.png" />
                     </a>
                 </div>
-                <div class="hid">
+                <div>
                     <a href="">
-                        <img width="100%" src="https://image.converse.com.cn/static/kv/pc/pleasure_kv_pc_191208.jpg" />
+                        <img class="hid" width="100%" height="100%"
+                            src="https://image.converse.com.cn/static/kv/pc/pleasure_kv_pc_191208.jpg" />
                     </a>
                 </div>
-                <div class="hid">
+                <div>
                     <a href="">
-                        <img width="100%" src="https://image.converse.com.cn/static/kv/pc/nocturnal_kv_pc_191212.GIF" />
+                        <img class="hid" width="100%" height="100%"
+                            src="https://image.converse.com.cn/static/kv/pc/nocturnal_kv_pc_191212.GIF" />
                     </a>
                 </div>
             </div>
-            <div class="rig"><span></span></div>
             <div class="lef"><span></span></div>
+            <div class="rig"><span></span></div>
             <div class="meau">
                 <ul>
                     <li class="show">MARBLE</li>
-                    <li class="">A$AP NAST</li>
-                    <li class="">JWANDERSON</li>
-                    <li class="">PLEASURES</li>
-                    <li class="">UTILITY</li>
-                    <li class="">NOCTURNAL</li>
+                    <li>A$AP NAST</li>
+                    <li>JWANDERSON</li>
+                    <li>PLEASURES</li>
+                    <li>UTILITY</li>
+                    <li>NOCTURNAL</li>
                 </ul>
+            </div>
+        </div>
+        <!-- 热卖单品 -->
+        <div class="selling-item">
+            <div class="inner">
+                <div class="title">
+                    <h1>热卖单品</h1>
+                </div>
+                <div class="pic">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <span>男的踩的</span>
+                                <img src="https://image.converse.com.cn/static/home/homepage/top_02_1203.jpg?2019120601"
+                                    alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>女的踩的</span>
+                                <img src="https://image.converse.com.cn/static/home/homepage/top_01_1203.jpg?2019120601"
+                                    alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>穿的</span>
+                                <img src="https://image.converse.com.cn/static/home/homepage/top_01_05.jpg?2019120601"
+                                    alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>戴的</span>
+                                <img src="https://image.converse.com.cn/static/home/homepage/top_01_07.jpg?2019120601"
+                                    alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 线 -->
+                <div class="line">
+                    <div class="line-con"></div>
+                </div>
+                <!-- 图片下面的内容 -->
+                <div class="pic_cont">
+                    <div class="list-slice man">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="list-slice women">
+                        <ul></ul>
+                        <div></div>
+                    </div>
+                    <div class="list-slice wear">
+                        <ul></ul>
+                        <div></div>
+                    </div>
+                    <div class="list-slice dioone">
+                        <ul></ul>
+                        <div></div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- 街头 -->
@@ -394,7 +447,7 @@
             </div>
         </div>
     </footer>
-    <script src="./script/index.js"></script>
+    <script src="./script/index.js" type="module" async="true"></script>
 </body>
 
 </html>
