--- a/src/shouye.html
+++ b/src/shouye.html
@@ -125,15 +125,17 @@
         <!-- 广告条 -->
         <div class="banner">
             <div class="inner">
-                <div class="swiper-slide move_one">
-                    <a href="">CONVERSE匡威官方商城不会以任何误设置扣款以及优惠券理由，要求您提供银行卡以及取消等操作，如果有问题请及时联系在线客服，感谢您的谅解和支持。</a>
-                </div>
-                <div class="swiper-slide move_two">
-                    <a href="">加入CONVERSE会员玩享，畅享全部订单免费配送！点击了解更多会员福利。 </a>
-                </div>
-                <div class="swiper-slide move_three">
-                    <a
-                        href="">尊敬的顾客您好，我们店铺是不会泄露您的消费信息的，请放心。另外我们也不会要求获取、收集、使用任何与消费者金融消费类（如：信用卡）信息，如果接到以上信息电话，是属于诈骗电话，请勿相信，以防钱财损失。如您对订单有疑问，请联系在线客服。</a>
+                <div>
+                    <div class="swiper-slide move_one">
+                        <a href="">CONVERSE匡威官方商城不会以任何误设置扣款以及优惠券理由，要求您提供银行卡以及取消等操作，如果有问题请及时联系在线客服，感谢您的谅解和支持。</a>
+                    </div>
+                    <div class="swiper-slide move_two">
+                        <a href="">加入CONVERSE会员玩享，畅享全部订单免费配送！点击了解更多会员福利。 </a>
+                    </div>
+                    <div class="swiper-slide move_three">
+                        <a
+                            href="">尊敬的顾客您好，我们店铺是不会泄露您的消费信息的，请放心。另外我们也不会要求获取、收集、使用任何与消费者金融消费类（如：信用卡）信息，如果接到以上信息电话，是属于诈骗电话，请勿相信，以防钱财损失。如您对订单有疑问，请联系在线客服。</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -234,22 +236,273 @@
                 </div>
                 <!-- 图片下面的内容 -->
                 <div class="pic_cont">
-                    <div class="list-slice man">
-                        <ul>
-                            <li></li>
-                        </ul>
+                    <div class="" id="box">
+                        <div class="list-slice list-slice-man  ">
+                            <div class="list-slice-all list-slice-top">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="list-slice-all list-slice-bot ">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="examine">
+                                <a href="#">查看所有男的踩的最新商品</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="list-slice women">
-                        <ul></ul>
-                        <div></div>
+                    <div id="box" class="hid">
+                        <div class="list-slice list-slice-woman l-s-p ">
+                            <div class="list-slice-all list-slice-top">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166320C227/166320C227_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="list-slice-all list-slice-bot ">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="examine">
+                                <a href="#">查看所有女的踩的最新商品</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="list-slice wear">
-                        <ul></ul>
-                        <div></div>
+                    <div id="box" class="hid">
+                        <div class="list-slice list-slice-dress l-s-p ">
+                            <div class="list-slice-all list-slice-top">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/10017091467/10017091467_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="list-slice-all list-slice-bot ">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="examine">
+                                <a href="#">查看所有穿的最新商品</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="list-slice dioone">
-                        <ul></ul>
-                        <div></div>
+                    <div id="box" class="hid">
+                        <div class="list-slice list-slice-cara l-s-p ">
+                            <div class="list-slice-all list-slice-top">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/10017273331/10017273331_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="list-slice-all list-slice-bot ">
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                                <dl>
+                                    <dt><a href=""><img
+                                                src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1B_NEW.png?2019120601"
+                                                alt=""></a></dt>
+                                    <dd><a href="">【男女同款】Chuck 70 E260</a></dd>
+                                    <dd>$999</dd>
+                                </dl>
+                            </div>
+                            <div class="examine">
+                                <a href="#">查看所有戴的最新商品</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
