第四天提交

--- a/src/shouye.html
+++ b/src/shouye.html
@@ -9,7 +9,10 @@
     <meta name="description"
         content="CONVERSE匡威官方网站,美国著名帆布鞋品牌,辉煌历史创于1908年,代表永恒不灭的原创力。匡威官网独家限量发售匡威帆布鞋,板鞋,T恤衫,卫衣,外套夹克,牛仔裤,短裤,双肩包等匡威产品,街头潮流,滑板文化,匡威为你提供全面的装备。">
     <title>匡威(CONVERSE)中国官方商城 - 匡威官方网站,正品匡威全系列,新品首发独家平台</title>
-    <link rel="stylesheet" href="./sass/index.min.css">
+    <link rel="stylesheet" href="./sass/main.min.css">
+    <link rel="stylesheet" href="./sass/footer.min.css">
+    <link rel="stylesheet" href="./sass/init.min.css">
+    <link rel="stylesheet" href="./sass/header.min.css">
     <link rel="Shortcut Icon" href="https://image.converse.com.cn/images/favicon.ico">
 </head>
 
@@ -591,76 +594,78 @@
                 </div>
             </div>
         </div>
-        <!-- 网站地图 -->
-        <div class="sitemap">
-            <div class="line"></div>
-            <dl>
-                <dt><a>男的</a></dt>
-                <dd class="strong"><a>CHUCK TAYLOR ALL STAR</a></dd>
-                <dd class="strong"><a>CONVERSE CONS</a></dd>
-                <dd class="strong"><a>JACK PURCELL</a></dd>
-                <dd class="strong margin"><a>CHUCK II</a></dd>
-                <dd><a>踩的</a></dd>
-                <dd><a>穿的</a></dd>
-                <dd><a>戴的</a></dd>
-                <dd><a>优惠</a> </dd>
-            </dl>
-            <dl>
-                <dt class="strong"><a>女的</a></dt>
-                <dd class="strong"><a>CHUCK TAYLOR ALL STAR</a></dd>
-                <dd class="strong"><a>CONVERSE CONS</a></dd>
-                <dd class="strong"><a>JACK PURCELL</a></dd>
-                <dd class="strong margin"><a>CHUCK II</a></dd>
-                <dd><a>踩的</a></dd>
-                <dd><a href="">穿的</a></dd>
-                <dd><a href="">戴的</a></dd>
-                <dd><a href="">优惠</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="">儿童</a></dt>
-                <dd class="strong"><a href="">CHUCK TAYLOR ALL STAR</a></dd>
-                <dd class="strong margin"><a href="">CONVERSE CONS</a></dd>
-                <dd><a href="">&nbsp;&nbsp;&nbsp;</a></dd>
-                <dd><a href="">&nbsp;&nbsp;&nbsp;</a></dd>
-                <dd><a href="">踩的</a</dd> <dd><a href="">穿的</a></dd>
-                <dd><a href="">戴的</a></dd>
-                <dd><a href="">优惠</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="">GLOBAL</a></dt>
-                <dd class="strong"><a href="">CONVERSE GLOBAL SITES</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="">我的账户</a></dt>
-                <dd><a href="">会员中心</a></dd>
-                <dd><a href="">现有订单</a></dd>
-                <dd><a href="">过去订单</a></dd>
-                <dd><a href="">退换货</a></dd>
-                <dd><a href="">账户设置</a></dd>
-                <dd><a href="">地址簿</a></dd>
-                <dd><a href="">我的优惠券</a></dd>
-                <dd><a href="">我的收藏</a></dd>
-                <dd><a href="">我的评论</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="">帮助和购物指南</a></dt>
-                <dd><a href="">账户</a></dd>
-                <dd><a href="">订单</a></dd>
-                <dd><a href="">尺码</a></dd>
-                <dd><a href="">退货和退款</a></dd>
-                <dd><a href="">换货</a></dd>
-                <dd><a href="">配送</a></dd>
-                <dd><a href="">联系我们</a></dd>
-                <dd><a href="">常见问题</a>
-                </dd>
-            </dl>
-            <dl>
-                <dt><a href="">NIKE</a></dt>
-                <dd class="strong"><a href="">NIKE+</a></dd>
-                <dd class="strong"><a href="">JORDAN</a></dd>
-            </dl>
-        </div>
+        
+
     </main>
+    <!-- 网站地图 -->
+    <div class="sitemap">
+        <div class="line"></div>
+        <dl>
+            <dt><a>男的</a></dt>
+            <dd class="strong"><a>CHUCK TAYLOR ALL STAR</a></dd>
+            <dd class="strong"><a>CONVERSE CONS</a></dd>
+            <dd class="strong"><a>JACK PURCELL</a></dd>
+            <dd class="strong margin"><a>CHUCK II</a></dd>
+            <dd><a>踩的</a></dd>
+            <dd><a>穿的</a></dd>
+            <dd><a>戴的</a></dd>
+            <dd><a>优惠</a> </dd>
+        </dl>
+        <dl>
+            <dt class="strong"><a>女的</a></dt>
+            <dd class="strong"><a>CHUCK TAYLOR ALL STAR</a></dd>
+            <dd class="strong"><a>CONVERSE CONS</a></dd>
+            <dd class="strong"><a>JACK PURCELL</a></dd>
+            <dd class="strong margin"><a>CHUCK II</a></dd>
+            <dd><a>踩的</a></dd>
+            <dd><a href="">穿的</a></dd>
+            <dd><a href="">戴的</a></dd>
+            <dd><a href="">优惠</a></dd>
+        </dl>
+        <dl>
+            <dt><a href="">儿童</a></dt>
+            <dd class="strong"><a href="">CHUCK TAYLOR ALL STAR</a></dd>
+            <dd class="strong margin"><a href="">CONVERSE CONS</a></dd>
+            <dd><a href="">&nbsp;&nbsp;&nbsp;</a></dd>
+            <dd><a href="">&nbsp;&nbsp;&nbsp;</a></dd>
+            <dd><a href="">踩的</a</dd> <dd><a href="">穿的</a></dd>
+            <dd><a href="">戴的</a></dd>
+            <dd><a href="">优惠</a></dd>
+        </dl>
+        <dl>
+            <dt><a href="">GLOBAL</a></dt>
+            <dd class="strong"><a href="">CONVERSE GLOBAL SITES</a></dd>
+        </dl>
+        <dl>
+            <dt><a href="">我的账户</a></dt>
+            <dd><a href="">会员中心</a></dd>
+            <dd><a href="">现有订单</a></dd>
+            <dd><a href="">过去订单</a></dd>
+            <dd><a href="">退换货</a></dd>
+            <dd><a href="">账户设置</a></dd>
+            <dd><a href="">地址簿</a></dd>
+            <dd><a href="">我的优惠券</a></dd>
+            <dd><a href="">我的收藏</a></dd>
+            <dd><a href="">我的评论</a></dd>
+        </dl>
+        <dl>
+            <dt><a href="">帮助和购物指南</a></dt>
+            <dd><a href="">账户</a></dd>
+            <dd><a href="">订单</a></dd>
+            <dd><a href="">尺码</a></dd>
+            <dd><a href="">退货和退款</a></dd>
+            <dd><a href="">换货</a></dd>
+            <dd><a href="">配送</a></dd>
+            <dd><a href="">联系我们</a></dd>
+            <dd><a href="">常见问题</a>
+            </dd>
+        </dl>
+        <dl>
+            <dt><a href="">NIKE</a></dt>
+            <dd class="strong"><a href="">NIKE+</a></dd>
+            <dd class="strong"><a href="">JORDAN</a></dd>
+        </dl>
+    </div>
     <footer>
         <div class="inner">
             <ul>
@@ -700,7 +705,7 @@
             </div>
         </div>
     </footer>
-    <script src="./script/index.js" type="module" async="true"></script>
+    <script src="./script/module.js" type="module" async="true"></script>
 </body>
 
 </html>
