第五天提交

--- a/src/detail.html
+++ b/src/detail.html
@@ -128,95 +128,51 @@
                         <i></i>
                         <span>分享</span>
                     </div>
-                    <div>
+                    <div class="ensh">
                         <i></i>
                         <span>加入收藏</span>
                     </div>
-                    <div>
+                    <div class="eva">
                         <span></span>
                     </div>
 
                 </div>
                 <div class="pic">
                     <div class="title">
-                        <h1>【男女同款】Chuck 70 E260</h1>
+                        <h1></h1>
                         <div>
-                            <span>价格</span>
-                            <span>￥799</span>
+                            <span>价格￥</span>
                         </div>
                     </div>
-                    <div class="bpic">
-                        <a href="">
-                            <img src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1H_NEW.png?2019120601"
-                                alt="">
-                        </a>
-                        <div class="bf"></div>
+                    <div class="bf">
+                        <img src="" alt="" class="bpic">
                     </div>
                     <div class="spic">
-                        <a href="">
-                            <img src="https://image.converse.com.cn/resources/product/166321C501/166321C501_1H_NEW.png?2019120601"
-                                alt="">
-                        </a>
+                        <img src="" alt="">
                         <div class="sf"></div>
                     </div>
                     <div class="list-pic">
-                        <ul>
-                            <li>
-                                <a href="">
-                                    <img src="https://image.converse.com.cn/resources/product/165995C331/165995C331_1S_NEW.png?2019120601"
-                                        alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="https://image.converse.com.cn/resources/product/165995C331/165995C331_1S_NEW.png?2019120601"
-                                        alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="https://image.converse.com.cn/resources/product/165995C331/165995C331_1S_NEW.png?2019120601"
-                                        alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="https://image.converse.com.cn/resources/product/165995C331/165995C331_1S_NEW.png?2019120601"
-                                        alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="https://image.converse.com.cn/resources/product/165995C331/165995C331_1S_NEW.png?2019120601"
-                                        alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="https://image.converse.com.cn/resources/product/165995C331/165995C331_1S_NEW.png?2019120601"
-                                        alt="">
-                                </a>
-                            </li>
-                        </ul>
+                        <a href="" style="margin-left: 0 ;" class="border"><img src="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt=""></a>
                     </div>
-                </div>   
+                </div>
             </div>
             <div class="by-warp">
                 <div class="chima">
-                    <div>请输入你的尺码</div>
-                    <div>
-                        <input type="text" value="35">
-                        <i></i>
-                    </div>
+                    <b>请输入你的尺码</b>
+                    <i></i>
+                    <input type="text" value="35">
+
                 </div>
                 <div class="amount">
-                    <div>数量</div>
-                    <div>
-                        <input type="text" value="1">
-                    </div>
-                    <i></i>
+                    <b>数量</b>
+                    <input type="text" value="1">
                 </div>
-                <div class="btn-warp">
+                <div class="btn">
                     <a href="">
                         <span>立即购买</span>
                     </a>
